--- a/live-vanilla-build/css/index.css
+++ b/live-vanilla-build/css/index.css
@@ -25,4 +25,12 @@ body {
 
 .grid {
   display: grid;
+  grid-template-columns: repeat(3, 80px);
+}
+
+.grid div {
+  height: 20px;
+  width: 20px;
+  background-color: red;
+  margin: 10px;
 }
