--- a/live-vanilla-build/css/index.css
+++ b/live-vanilla-build/css/index.css
@@ -26,11 +26,24 @@ body {
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 80px);
+  grid-template-rows: 50px repeat(3, 80px) 60px;
+  gap: 5px;
 }
 
-.grid div {
-  height: 20px;
-  width: 20px;
+.turn {
+  background-color: green;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.square {
   background-color: red;
-  margin: 10px;
+}
+
+.score {
+  background-color: blue;
+}
+
+.actions {
+  background-color: purple;
 }
