--- a/live-vanilla-build/css/index.css
+++ b/live-vanilla-build/css/index.css
@@ -51,6 +51,9 @@ body {
   background-color: green;
   grid-column-start: 1;
   grid-column-end: 3;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .square {
